--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <section style="background-color: #dd65b5;">
     <h1>Pawani Sharma</h1>
-    <img src="myphoto.jpg" id="profile-pic" alt="My Photo">
+    <img src="Myphoto.jpg" id="profile-pic" alt="My Photo">
     <p class="bio">Myself Pawani Sharma,doing btech Computer Engineering from bharti Vidyapeeth ,Pune.I want to become a software Engineer</p>
 
     <h2>Hobbies</h2>
